SynEdit: PascalHighlighter, implement new highlights for declaration sections and proc-headers: param, type, value. Implement basic label and structure-member (after dot) highlight. Issues #22711 and #40152

--- a/ide/frames/editor_indent_options.lfm
+++ b/ide/frames/editor_indent_options.lfm
@@ -352,10 +352,10 @@ object EditorIndentOptionsFrame: TEditorIndentOptionsFrame
     Height = 268
     Top = 231
     Width = 433
-    ActivePage = tbString
+    ActivePage = tbAnsi
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Top = 6
-    TabIndex = 3
+    TabIndex = 0
     TabOrder = 8
     object tbAnsi: TTabSheet
       Caption = 'tbAnsi'
