--- a/ide/frames/editor_markup_options.lfm
+++ b/ide/frames/editor_markup_options.lfm
@@ -1,17 +1,149 @@
 object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
   Left = 0
-  Height = 506
+  Height = 645
   Top = 0
   Width = 634
   HorzScrollBar.Page = 1
   VertScrollBar.Page = 1
   AutoScroll = True
-  ClientHeight = 506
+  ClientHeight = 645
   ClientWidth = 634
   TabOrder = 0
   Visible = False
-  DesignLeft = 408
-  DesignTop = 211
+  DesignLeft = 557
+  DesignTop = 182
+  object divWordGroup: TDividerBevel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 0
+    Height = 15
+    Top = 0
+    Width = 634
+    Caption = 'divWordGroup'
+    Anchors = [akTop, akLeft, akRight]
+    Font.Style = [fsBold]
+    ParentFont = False
+  end
+  object MarkupWordByTimerCheckBox: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = divWordGroup
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 21
+    Width = 184
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    Caption = 'MarkupWordByTimerCheckBox'
+    TabOrder = 0
+  end
+  object MarkupColorLink: TLabel
+    AnchorSideLeft.Control = MarkupWordByTimerCheckBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = MarkupWordByTimerCheckBox
+    AnchorSideTop.Side = asrCenter
+    Cursor = crHandPoint
+    Left = 196
+    Height = 15
+    Top = 23
+    Width = 92
+    BorderSpacing.Left = 6
+    Caption = 'MarkupColorLink'
+    Font.Color = clBlue
+    ParentColor = False
+    ParentFont = False
+    OnClick = MarkupColorLinkClick
+    OnMouseEnter = BracketLinkMouseEnter
+    OnMouseLeave = BracketLinkMouseLeave
+  end
+  object MarkupCurrentWordKeys: TLabel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = MarkupWordByTimerCheckBox
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 15
+    Top = 46
+    Width = 134
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    Caption = 'MarkupCurrentWordKeys'
+  end
+  object MarkupKeyLink: TLabel
+    AnchorSideLeft.Control = MarkupCurrentWordKeys
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = MarkupCurrentWordKeys
+    AnchorSideTop.Side = asrCenter
+    Cursor = crHandPoint
+    Left = 146
+    Height = 15
+    Top = 46
+    Width = 82
+    BorderSpacing.Left = 6
+    Caption = 'MarkupKeyLink'
+    Font.Color = clBlue
+    ParentColor = False
+    ParentFont = False
+    OnClick = MarkupKeyLinkClick
+    OnMouseEnter = BracketLinkMouseEnter
+    OnMouseLeave = BracketLinkMouseLeave
+  end
+  object MarkupWordNoKeyword: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = MarkupCurrentWordKeys
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 67
+    Width = 150
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    Caption = 'MarkupWordNoKeyword'
+    TabOrder = 1
+  end
+  object MarkupWordTrim: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = MarkupWordNoKeyword
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 92
+    Width = 112
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    Caption = 'MarkupWordTrim'
+    TabOrder = 2
+  end
+  object MarkupWordFullLenLabel: TLabel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = MarkupWordFullLenSpin
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Control = MarkupWordFullLenSpin
+    Left = 6
+    Height = 15
+    Top = 121
+    Width = 136
+    BorderSpacing.Left = 6
+    Caption = 'MarkupWordFullLenLabel'
+    ParentColor = False
+  end
+  object MarkupWordFullLenSpin: TSpinEdit
+    AnchorSideLeft.Control = MarkupWordFullLenLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = MarkupWordTrim
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 148
+    Height = 23
+    Top = 117
+    Width = 48
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    MaxValue = 300
+    TabOrder = 3
+  end
   object MarkupWordDelayLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = MarkupWordTimeTrackBar
@@ -30,18 +162,60 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     Caption = 'MarkupWordDelayLabel'
     ParentColor = False
   end
-  object MarkupWordFullLenLabel: TLabel
+  object MarkupWordTimeTrackBar: TTrackBar
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = MarkupWordFullLenSpin
-    AnchorSideTop.Side = asrCenter
-    AnchorSideRight.Control = MarkupWordFullLenSpin
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 15
-    Top = 121
-    Width = 136
+    Height = 30
+    Top = 146
+    Width = 622
+    Frequency = 250
+    Max = 4000
+    Min = 10
+    Position = 500
+    ShowSelRange = False
+    OnChange = AutoDelayTrackBarChange
+    Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 6
-    Caption = 'MarkupWordFullLenLabel'
-    ParentColor = False
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
+    TabOrder = 4
+  end
+  object divMatchingBrackets: TDividerBevel
+    AnchorSideTop.Control = MarkupWordTimeTrackBar
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 0
+    Height = 15
+    Top = 176
+    Width = 634
+    Caption = 'divMatchingBrackets'
+    Anchors = [akTop, akLeft, akRight]
+    Font.Style = [fsBold]
+    ParentFont = False
+  end
+  object BracketCombo: TComboBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = divMatchingBrackets
+    AnchorSideTop.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 6
+    Height = 23
+    Top = 197
+    Width = 220
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    ItemHeight = 15
+    Style = csDropDownList
+    TabOrder = 5
+    OnChange = BracketComboChange
+    OnExit = BracketComboExit
+    OnKeyDown = BracketComboKeyDown
   end
   object BracketLabel: TLabel
     AnchorSideLeft.Control = BracketCombo
@@ -74,149 +248,6 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     OnClick = BracketLinkClick
     OnMouseEnter = BracketLinkMouseEnter
     OnMouseLeave = BracketLinkMouseLeave
-  end
-  object MarkupColorLink: TLabel
-    AnchorSideLeft.Control = MarkupWordByTimerCheckBox
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = MarkupWordByTimerCheckBox
-    AnchorSideTop.Side = asrCenter
-    Cursor = crHandPoint
-    Left = 196
-    Height = 15
-    Top = 23
-    Width = 92
-    BorderSpacing.Left = 6
-    Caption = 'MarkupColorLink'
-    Font.Color = clBlue
-    ParentColor = False
-    ParentFont = False
-    OnClick = MarkupColorLinkClick
-    OnMouseEnter = BracketLinkMouseEnter
-    OnMouseLeave = BracketLinkMouseLeave
-  end
-  object MarkupWordTimeTrackBar: TTrackBar
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MarkupWordFullLenSpin
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 6
-    Height = 30
-    Top = 146
-    Width = 622
-    Frequency = 250
-    Max = 4000
-    Min = 10
-    Position = 500
-    ShowSelRange = False
-    OnChange = AutoDelayTrackBarChange
-    Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
-    TabOrder = 4
-  end
-  object MarkupWordNoKeyword: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MarkupCurrentWordKeys
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 67
-    Width = 150
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    Caption = 'MarkupWordNoKeyword'
-    TabOrder = 1
-  end
-  object MarkupWordFullLenSpin: TSpinEdit
-    AnchorSideLeft.Control = MarkupWordFullLenLabel
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = MarkupWordTrim
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 148
-    Height = 23
-    Top = 117
-    Width = 48
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    MaxValue = 300
-    TabOrder = 3
-  end
-  object MarkupWordByTimerCheckBox: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = divWordGroup
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 21
-    Width = 184
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    Caption = 'MarkupWordByTimerCheckBox'
-    TabOrder = 0
-  end
-  object MarkupWordTrim: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MarkupWordNoKeyword
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 92
-    Width = 112
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    Caption = 'MarkupWordTrim'
-    TabOrder = 2
-  end
-  object BracketCombo: TComboBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = divMatchingBrackets
-    AnchorSideTop.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 6
-    Height = 23
-    Top = 197
-    Width = 220
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    ItemHeight = 15
-    Style = csDropDownList
-    TabOrder = 5
-    OnChange = BracketComboChange
-    OnExit = BracketComboExit
-    OnKeyDown = BracketComboKeyDown
-  end
-  object divWordGroup: TDividerBevel
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Owner
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 0
-    Height = 15
-    Top = 0
-    Width = 634
-    Caption = 'divWordGroup'
-    Anchors = [akTop, akLeft, akRight]
-    Font.Style = [fsBold]
-    ParentFont = False
-  end
-  object divMatchingBrackets: TDividerBevel
-    AnchorSideTop.Control = MarkupWordTimeTrackBar
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 0
-    Height = 15
-    Top = 176
-    Width = 634
-    Caption = 'divMatchingBrackets'
-    Anchors = [akTop, akLeft, akRight]
-    Font.Style = [fsBold]
-    ParentFont = False
   end
   object divKeywords: TDividerBevel
     AnchorSideLeft.Control = Owner
@@ -276,34 +307,114 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     TabOrder = 7
     OnChange = dropPasStringKeywordsChange
   end
-  object MarkupKeyLink: TLabel
-    AnchorSideLeft.Control = MarkupCurrentWordKeys
+  object cbCaseLabelColorForOtherwise: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = dropPasStringKeywords
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 301
+    Width = 183
+    BorderSpacing.Around = 6
+    Caption = 'cbCaseLabelColorForOtherwise'
+    TabOrder = 14
+  end
+  object CaseLabelLink: TLabel
+    AnchorSideLeft.Control = cbCaseLabelColorForOtherwise
     AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = MarkupCurrentWordKeys
+    AnchorSideTop.Control = cbCaseLabelColorForOtherwise
     AnchorSideTop.Side = asrCenter
     Cursor = crHandPoint
-    Left = 146
+    Left = 195
     Height = 15
-    Top = 46
-    Width = 82
-    BorderSpacing.Left = 6
-    Caption = 'MarkupKeyLink'
+    Top = 303
+    Width = 75
+    BorderSpacing.Around = 6
+    Caption = 'CaseLabelLink'
     Font.Color = clBlue
     ParentColor = False
     ParentFont = False
-    OnClick = MarkupKeyLinkClick
+    OnClick = CaseLabelLinkClick
     OnMouseEnter = BracketLinkMouseEnter
     OnMouseLeave = BracketLinkMouseLeave
   end
+  object dropDeclaredTypeAttrMode: TComboBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbCaseLabelColorForOtherwise
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 23
+    Top = 326
+    Width = 220
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    ItemHeight = 15
+    Style = csDropDownList
+    TabOrder = 16
+    OnChange = dropPasStringKeywordsChange
+  end
+  object lblDeclaredTypeAttrMode: TLabel
+    AnchorSideLeft.Control = dropDeclaredTypeAttrMode
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = dropDeclaredTypeAttrMode
+    AnchorSideTop.Side = asrCenter
+    Left = 232
+    Height = 15
+    Top = 330
+    Width = 134
+    BorderSpacing.Left = 6
+    Caption = 'lblDeclaredTypeAttrMode'
+    ParentColor = False
+  end
+  object dropDeclaredValueAttrMode: TComboBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = dropDeclaredTypeAttrMode
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 23
+    Top = 355
+    Width = 220
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    ItemHeight = 15
+    Style = csDropDownList
+    TabOrder = 17
+    OnChange = dropPasStringKeywordsChange
+  end
+  object lblDeclaredValueAttrMode: TLabel
+    AnchorSideLeft.Control = dropDeclaredValueAttrMode
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = dropDeclaredValueAttrMode
+    AnchorSideTop.Side = asrCenter
+    Left = 232
+    Height = 15
+    Top = 359
+    Width = 138
+    BorderSpacing.Left = 6
+    Caption = 'lblDeclaredValueAttrMode'
+    ParentColor = False
+  end
+  object cbDeclaredValueAttrForNumString: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = dropDeclaredValueAttrMode
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 384
+    Width = 201
+    BorderSpacing.Around = 6
+    Caption = 'cbDeclaredValueAttrForNumString'
+    TabOrder = 15
+  end
   object divKeyWordGroups: TDividerBevel
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = dropPasStringKeywords
+    AnchorSideTop.Control = cbDeclaredValueAttrForNumString
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 15
-    Top = 301
+    Top = 409
     Width = 634
     Caption = 'divKeyWordGroups'
     Anchors = [akTop, akLeft, akRight]
@@ -311,25 +422,47 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     Font.Style = [fsBold]
     ParentFont = False
   end
-  object chkKWGroups: TCheckListBox
+  object cbMarkupWordBracket: TCheckBox
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = LanguageComboBox
+    AnchorSideTop.Control = divKeyWordGroups
     AnchorSideTop.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 150
-    Top = 401
-    Width = 220
-    Anchors = [akTop, akLeft, akBottom]
+    Height = 19
+    Top = 430
+    Width = 140
     BorderSpacing.Around = 6
-    Constraints.MinHeight = 150
-    ItemHeight = 0
-    TabOrder = 13
-    OnClick = chkKWGroupsClick
-    OnClickCheck = chkKWGroupsClickCheck
-    OnExit = chkKWGroupsClickCheck
-    OnKeyUp = chkKWGroupsKeyUp
+    Caption = 'cbMarkupWordBracket'
+    TabOrder = 8
+    OnChange = cbMarkupWordBracketChange
+  end
+  object cbMarkupOutline: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbMarkupWordBracket
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 455
+    Width = 111
+    BorderSpacing.Around = 6
+    Caption = 'cbMarkupOutline'
+    TabOrder = 9
+    OnChange = cbMarkupOutlineChange
+  end
+  object lbMarkupWarnNoColor: TLabel
+    AnchorSideLeft.Control = cbMarkupOutline
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = cbMarkupOutline
+    AnchorSideTop.Side = asrCenter
+    Left = 137
+    Height = 15
+    Top = 457
+    Width = 124
+    BorderSpacing.Left = 20
+    Caption = 'lbMarkupWarnNoColor'
+    Font.Color = clRed
+    ParentColor = False
+    ParentFont = False
+    Visible = False
   end
   object LanguageComboBox: TComboBox
     AnchorSideLeft.Control = Owner
@@ -337,7 +470,7 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     AnchorSideTop.Side = asrBottom
     Left = 6
     Height = 23
-    Top = 372
+    Top = 480
     Width = 200
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
@@ -355,11 +488,31 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     AnchorSideTop.Side = asrCenter
     Left = 212
     Height = 15
-    Top = 376
+    Top = 484
     Width = 80
     BorderSpacing.Left = 6
     Caption = 'LanguageLabel'
     ParentColor = False
+  end
+  object chkKWGroups: TCheckListBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = LanguageComboBox
+    AnchorSideTop.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 6
+    Height = 150
+    Top = 509
+    Width = 220
+    Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.Around = 6
+    Constraints.MinHeight = 150
+    ItemHeight = 0
+    TabOrder = 13
+    OnClick = chkKWGroupsClick
+    OnClickCheck = chkKWGroupsClickCheck
+    OnExit = chkKWGroupsClickCheck
+    OnKeyUp = chkKWGroupsKeyUp
   end
   object cbMarkup: TCheckBox
     AnchorSideLeft.Control = chkKWGroups
@@ -367,7 +520,7 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     AnchorSideTop.Control = chkKWGroups
     Left = 232
     Height = 19
-    Top = 401
+    Top = 509
     Width = 72
     BorderSpacing.Left = 6
     Caption = 'cbMarkup'
@@ -381,66 +534,12 @@ object EditorMarkupOptionsFrame: TEditorMarkupOptionsFrame
     AnchorSideTop.Side = asrBottom
     Left = 232
     Height = 19
-    Top = 426
+    Top = 534
     Width = 70
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'cbOutline'
     TabOrder = 12
     OnChange = cbMarkupChange
-  end
-  object cbMarkupWordBracket: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = divKeyWordGroups
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 322
-    Width = 140
-    BorderSpacing.Around = 6
-    Caption = 'cbMarkupWordBracket'
-    TabOrder = 8
-    OnChange = cbMarkupWordBracketChange
-  end
-  object cbMarkupOutline: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = cbMarkupWordBracket
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 347
-    Width = 111
-    BorderSpacing.Around = 6
-    Caption = 'cbMarkupOutline'
-    TabOrder = 9
-    OnChange = cbMarkupOutlineChange
-  end
-  object lbMarkupWarnNoColor: TLabel
-    AnchorSideLeft.Control = cbMarkupOutline
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = cbMarkupOutline
-    AnchorSideTop.Side = asrCenter
-    Left = 137
-    Height = 15
-    Top = 349
-    Width = 124
-    BorderSpacing.Left = 20
-    Caption = 'lbMarkupWarnNoColor'
-    Font.Color = clRed
-    ParentColor = False
-    ParentFont = False
-    Visible = False
-  end
-  object MarkupCurrentWordKeys: TLabel
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MarkupWordByTimerCheckBox
-    AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 15
-    Top = 46
-    Width = 134
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    Caption = 'MarkupCurrentWordKeys'
   end
 end
