--- a/ide/frames/editor_color_options.lfm
+++ b/ide/frames/editor_color_options.lfm
@@ -1,9 +1,9 @@
 object EditorColorOptionsFrame: TEditorColorOptionsFrame
   Left = 0
-  Height = 443
+  Height = 466
   Top = 0
   Width = 640
-  ClientHeight = 443
+  ClientHeight = 466
   ClientWidth = 640
   TabOrder = 0
   Visible = False
@@ -15,11 +15,10 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
+    AnchorSideBottom.Control = lblColorInfo
     Left = 0
     Height = 239
-    Top = 204
+    Top = 212
     Width = 640
     Anchors = [akLeft, akRight, akBottom]
     AutoSize = True
@@ -103,149 +102,9 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
       inherited Panel1: TPanel
         AnchorSideLeft.Control = SynColorAttrEditor1
         AnchorSideTop.Control = SynColorAttrEditor1
-        Width = 915
-        ClientWidth = 915
-        inherited pnlForegroundName: TPanel
-          Width = 220
-          ClientWidth = 220
-          inherited ForeGroundUseDefaultCheckBox: TCheckBox
-            Width = 190
-          end
-        end
-        inherited Panel2: TPanel
-          Left = 229
-        end
-        inherited Panel3: TPanel
-          Left = 435
-        end
-        inherited Panel4: TPanel
-          Left = 561
-        end
-        inherited Panel5: TPanel
-          Left = 629
-        end
-        inherited Panel6: TPanel
-          Left = 718
-        end
-        inherited lbFiller1: TLabel
-          Left = 786
-        end
-        inherited pnlBackgroundName: TPanel
-          Width = 220
-          ClientWidth = 220
-          inherited BackGroundUseDefaultCheckBox: TCheckBox
-            Width = 192
-          end
-        end
-        inherited Panel7: TPanel
-          Left = 229
-        end
-        inherited Panel8: TPanel
-          Left = 435
-        end
-        inherited Panel9: TPanel
-          Left = 561
-        end
-        inherited Panel10: TPanel
-          Left = 629
-        end
-        inherited Panel11: TPanel
-          Left = 718
-        end
-        inherited lbFiller2: TLabel
-          Left = 786
-        end
-        inherited Panel12: TPanel
-          Width = 220
-          ClientWidth = 220
-          inherited FrameColorUseDefaultCheckBox: TCheckBox
-            Width = 189
-          end
-        end
-        inherited Panel13: TPanel
-          Left = 229
-        end
-        inherited Panel14: TPanel
-          Left = 435
-        end
-        inherited Panel15: TPanel
-          Left = 561
-        end
-        inherited Panel16: TPanel
-          Left = 629
-        end
-        inherited Panel17: TPanel
-          Left = 718
-        end
-        inherited pnlFrameHost1: TPanel
-          Left = 786
-        end
-        inherited lbFiller3: TLabel
-          Width = 220
-        end
-        inherited pnlFrameHost2: TPanel
-          Left = 229
-        end
-        inherited lbFiller4: TLabel
-          Left = 435
-        end
-        inherited lbFiller5: TLabel
-          Left = 561
-        end
-        inherited lbFiller6: TLabel
-          Left = 629
-        end
-        inherited lbFiller7: TLabel
-          Left = 718
-        end
-        inherited lbFiller8: TLabel
-          Left = 786
-        end
-        inherited Panel18: TPanel
-          Width = 220
-          ClientWidth = 220
-          inherited MarkupFoldColorUseDefaultCheckBox: TCheckBox
-            Width = 220
-          end
-        end
-        inherited Panel19: TPanel
-          Left = 229
-        end
-        inherited Panel20: TPanel
-          Left = 435
-        end
-        inherited Panel21: TPanel
-          Left = 561
-        end
-        inherited lbFiller9: TLabel
-          Left = 629
-        end
-        inherited lbFiller10: TLabel
-          Left = 718
-        end
-        inherited Panel22: TPanel
-          Left = 786
-        end
       end
       inherited pnlUnderline: TPanel
         AnchorSideLeft.Control = SynColorAttrEditor1
-        Width = 143
-        ClientWidth = 143
-        inherited TextUnderlineCheckBox: TCheckBox
-          Width = 143
-        end
-      end
-      inherited pnlBold: TPanel
-        Left = 155
-        inherited TextBoldCheckBox: TCheckBox
-          Width = 116
-        end
-      end
-      inherited pnlItalic: TPanel
-        Left = 289
-        inherited TextItalicCheckBox: TCheckBox
-          Width = 117
-        end
       end
       inherited lblInfo: TLabel
         AnchorSideLeft.Control = SynColorAttrEditor1
@@ -254,7 +113,6 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
       end
       inherited pnlWords: TPanel
         AnchorSideTop.Control = SynColorAttrEditor1
-        Left = 915
       end
     end
     object PriorityEditor: TPanel
@@ -682,17 +540,17 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = pnlElementAttributes
     Left = 0
-    Height = 179
+    Height = 187
     Top = 25
     Width = 640
     Anchors = [akTop, akLeft, akRight, akBottom]
     BevelOuter = bvNone
-    ClientHeight = 179
+    ClientHeight = 187
     ClientWidth = 640
     TabOrder = 2
     object ColorElementTree: TTreeView
       Left = 0
-      Height = 173
+      Height = 181
       Top = 6
       Width = 200
       Align = alLeft
@@ -720,7 +578,7 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
       AnchorSideBottom.Control = ColorElementTree
       AnchorSideBottom.Side = asrBottom
       Left = 207
-      Height = 173
+      Height = 181
       Top = 6
       Width = 433
       BorderSpacing.Left = 1
@@ -1254,7 +1112,7 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
     end
     object Splitter1: TSplitter
       Left = 201
-      Height = 179
+      Height = 187
       Top = 0
       Width = 5
     end
@@ -1334,6 +1192,18 @@ object EditorColorOptionsFrame: TEditorColorOptionsFrame
       Top = 0
       OnClick = SetAllAttributesToDefaultButtonClick
     end
+  end
+  object lblColorInfo: TLabel
+    Left = 0
+    Height = 15
+    Top = 451
+    Width = 640
+    Align = alBottom
+    Caption = 'lblColorInfo'
+    Font.Color = clRed
+    ParentFont = False
+    Visible = False
+    WordWrap = True
   end
   object ExportSaveDialog: TSaveDialog
     DefaultExt = '.xml'
