--- a/debugger/frames/debugger_class_options.lfm
+++ b/debugger/frames/debugger_class_options.lfm
@@ -45,11 +45,13 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
     AnchorSideTop.Control = cbBackend
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 22
+    Height = 25
     Top = 50
     Width = 75
+    AutoSize = True
     BorderSpacing.Around = 6
     Caption = 'btnAdd'
+    Constraints.MinWidth = 75
     TabOrder = 1
     OnClick = tbAddNewClick
   end
@@ -58,11 +60,13 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = btnAdd
     Left = 93
-    Height = 22
+    Height = 25
     Top = 50
     Width = 75
+    AutoSize = True
     BorderSpacing.Left = 12
     Caption = 'btnCopy'
+    Constraints.MinWidth = 75
     TabOrder = 2
     OnClick = tbCopyClick
   end
@@ -70,13 +74,15 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
     AnchorSideTop.Control = btnAdd
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 451
-    Height = 22
+    Left = 449
+    Height = 25
     Top = 50
-    Width = 75
+    Width = 77
     Anchors = [akTop, akRight]
+    AutoSize = True
     BorderSpacing.Right = 6
     Caption = 'btnDelete'
+    Constraints.MinWidth = 75
     TabOrder = 3
     OnClick = tbDeleteClick
   end
@@ -88,7 +94,7 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 15
-    Top = 78
+    Top = 81
     Width = 532
     Caption = 'divEditBackend'
     Anchors = [akTop, akLeft, akRight]
@@ -104,12 +110,12 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 0
-    Height = 341
-    Top = 93
+    Height = 338
+    Top = 96
     Width = 532
     Anchors = [akTop, akLeft, akRight, akBottom]
     BevelOuter = bvNone
-    ClientHeight = 341
+    ClientHeight = 338
     ClientWidth = 532
     TabOrder = 0
     object lblName: TLabel
@@ -304,7 +310,7 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
       AnchorSideBottom.Control = Panel1
       AnchorSideBottom.Side = asrBottom
       Left = 0
-      Height = 113
+      Height = 110
       Top = 228
       Width = 532
       Anchors = [akTop, akLeft, akRight, akBottom]
